--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <img id="intro-icon" src="LexIconWhite,png.png" alt="Lex Icon">
-    <p>Hi, Hey, it's Lex. Nobody magician, travelling aerial photographer, techbro and an eternal soul searcher.<br>The photos you are about to view were shot on a DJI OSMO 360 camera at 120 MP. I tried.</p>
+    <p>Lex here, nobody magician, travelling aerial photographer, techbro, eternal soul searcher.<br>The photos you are about to view were shot on my DJI OSMO 360 (120 MP).</p>
     <p>If you would like to see my other work click <span id="preview-link" style="padding:4px 8px; border-radius:6px; background:rgba(255,255,255,0.18); cursor:pointer; display:inline-block;">here</span>.</p>
 
     <hr>
